--- a/api_paths/a/b/post.toml
+++ b/api_paths/a/b/post.toml
@@ -5,3 +5,15 @@ group = "b"
 title = "Post b"
 
 summary = "This is to post to 'b'"
+
+[openapi]
+summary = "b"
+
+[openapi.responses.200]
+description = "A JSON array of user names"
+
+[openapi.responses.200.content."application/json".schema]
+type = "array"
+
+[openapi.responses.200.content."application/json".schema.items]
+type = "string"
