--- a/api_paths/c/get.toml
+++ b/api_paths/c/get.toml
@@ -5,3 +5,15 @@ group = "c"
 title = "Get c"
 
 summary = "This is to get 'c'"
+
+[openapi]
+summary = "c"
+
+[openapi.responses.200]
+description = "A JSON array of user names"
+
+[openapi.responses.200.content."application/json".schema]
+type = "array"
+
+[openapi.responses.200.content."application/json".schema.items]
+type = "string"
