--- a/api_paths/a/b/{id}/get.toml
+++ b/api_paths/a/b/{id}/get.toml
@@ -18,6 +18,13 @@ See [appendix-c](appendix.md#appendix-c)
 [openapi]
 summary = "b"
 
+[[openapi.parameters]]
+in = "path"
+name = "id"
+schema = { type = "integer" }
+required = true
+description = "User id"
+
 [openapi.responses.200]
 description = "A JSON array of user names"
 
