--- a/api_paths/a/b/get.toml
+++ b/api_paths/a/b/get.toml
@@ -16,7 +16,8 @@ See [appendix-b](appendix.md#appendix-b)
 '''
 
 [openapi]
-summary = "b"
+summary = "This is to get 'b' without id"
+operationId = "bWithOutId"
 
 [openapi.responses.200]
 description = "A JSON array of user names"
