--- a/api_paths/a/b/post.toml
+++ b/api_paths/a/b/post.toml
@@ -8,6 +8,7 @@ summary = "This is to post to 'b'"
 
 [openapi]
 summary = "b"
+operationId = "bPost"
 
 [openapi.responses.200]
 description = "A JSON array of user names"
