--- a/api_paths/c/get.toml
+++ b/api_paths/c/get.toml
@@ -8,6 +8,7 @@ summary = "This is to get 'c'"
 
 [openapi]
 summary = "c"
+operationId = "cGet"
 
 [openapi.responses.200]
 description = "A JSON array of user names"
