--- a/api_paths/a/b/{id}/get.toml
+++ b/api_paths/a/b/{id}/get.toml
@@ -16,7 +16,7 @@ See [appendix-c](appendix.md#appendix-c)
 '''
 
 [openapi]
-summary = "b"
+summary = "This is to get 'b'"
 operationId = "bWithId"
 
 [[openapi.parameters]]
