--- a/api_paths/a/b/get.toml
+++ b/api_paths/a/b/get.toml
@@ -15,15 +15,15 @@ note = '''
 See [appendix-b](appendix.md#appendix-b)
 '''
 
-[openapi]
+[openapi_paths]
 summary = "This is to get 'b' without id"
 operationId = "bWithOutId"
 
-[openapi.responses.200]
+[openapi_paths.responses.200]
 description = "A JSON array of user names"
 
-[openapi.responses.200.content."application/json".schema]
+[openapi_paths.responses.200.content."application/json".schema]
 type = "array"
 
-[openapi.responses.200.content."application/json".schema.items]
+[openapi_paths.responses.200.content."application/json".schema.items]
 type = "string"
