--- a/api_paths/a/b/post.toml
+++ b/api_paths/a/b/post.toml
@@ -6,15 +6,15 @@ title = "Post b"
 
 summary = "This is to post to 'b'"
 
-[openapi]
+[openapi_paths]
 summary = "This is to post to 'b'"
 operationId = "bPost"
 
-[openapi.responses.200]
+[openapi_paths.responses.200]
 description = "A JSON array of user names"
 
-[openapi.responses.200.content."application/json".schema]
+[openapi_paths.responses.200.content."application/json".schema]
 type = "array"
 
-[openapi.responses.200.content."application/json".schema.items]
+[openapi_paths.responses.200.content."application/json".schema.items]
 type = "string"
