--- a/api_paths/a/b/{id}/get.toml
+++ b/api_paths/a/b/{id}/get.toml
@@ -15,22 +15,22 @@ note = '''
 See [appendix-c](appendix.md#appendix-c)
 '''
 
-[openapi]
+[openapi_paths]
 summary = "This is to get 'b'"
 operationId = "bWithId"
 
-[[openapi.parameters]]
+[[openapi_paths.parameters]]
 in = "path"
 name = "id"
 schema = { type = "integer" }
 required = true
 description = "User id"
 
-[openapi.responses.200]
+[openapi_paths.responses.200]
 description = "A JSON array of user names"
 
-[openapi.responses.200.content."application/json".schema]
+[openapi_paths.responses.200.content."application/json".schema]
 type = "array"
 
-[openapi.responses.200.content."application/json".schema.items]
+[openapi_paths.responses.200.content."application/json".schema.items]
 type = "string"
