--- a/api_paths/c/get.toml
+++ b/api_paths/c/get.toml
@@ -6,15 +6,15 @@ title = "Get c"
 
 summary = "This is to get 'c'"
 
-[openapi]
+[openapi_paths]
 summary = "This is to get 'c'"
 operationId = "cGet"
 
-[openapi.responses.200]
+[openapi_paths.responses.200]
 description = "A JSON array of user names"
 
-[openapi.responses.200.content."application/json".schema]
+[openapi_paths.responses.200.content."application/json".schema]
 type = "array"
 
-[openapi.responses.200.content."application/json".schema.items]
+[openapi_paths.responses.200.content."application/json".schema.items]
 type = "string"
